# ChangeLog for mail-filter/opendmarc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/opendmarc/ChangeLog,v 1.2 2013/10/29 19:45:35 grobian Exp $

  29 Oct 2013; Fabian Groffen <grobian@gentoo.org> opendmarc-1.1.3.ebuild:
  Fix dependencies to better reflect reality, bug #489680

*opendmarc-1.1.3 (30 Sep 2013)

  30 Sep 2013; Fabian Groffen <grobian@gentoo.org> +metadata.xml,
  +opendmarc-1.1.3.ebuild:
  Initial import, ebuild by me, based on work by Vladimir Varlamov in bug
  #486522