@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST opendmarc-1.1.3.tar.gz 586574 SHA256 4f9511ebd8cefb6e5a4d836f6285a1b6e4d682daec79fdba9fc7925b5f4fcfca SHA512 30de56b6da1665e0ed68484702bfcfcbd0b65275053818c807c16dea26f0e014a0484dc9d5ed6d1405628ea22a61082f13cecf66714a414139f612c51a294086 WHIRLPOOL 7364dfd213fb05f1d58eecb940a95eb1328b78204c0a12a341a0a6cdf48aa8c638b0e4e4ed0c7fa51e72fb11ab68da386050124741a8215c4aec788b7da0d8b2
-EBUILD opendmarc-1.1.3.ebuild 651 SHA256 f89dff87f29a4159f85488e34b3e9ae364513a6bc69056fbaa1021e6abd4c4d2 SHA512 56efcdbf5e174cb05253f45344b68c05b40d23f323d07580c88596561afae2165b487f84aa7d558e9019edc82df1606a7addcf9a31f79437045b6a0bd775cef2 WHIRLPOOL b3b7775a884ad75c9694f8ea1ee2e8d53000330d1ae5bcea07bcf3891bc90c61d5bccb86f7729136e45dda03e068ccf394a2ac03929a58574f6acc81ad51f25d
-MISC ChangeLog 559 SHA256 cb790890bdbd1074ed808bf0b37d87c01c98439dbd0649f0077fcd4e8e89f9aa SHA512 29986d17326c2bef2fb877f8e87e51d857f49629dbb95127884a338dedf446757e6f7c921059300591754f2710c3549196424fd81f7c3dc978ec70b1d35a191d WHIRLPOOL 30abebc9bf3c48fabd20dcb583d110612eb5292cfa71382c143c1e28923c497784958825977372990d611b36e9fc8106ead79e5ce480d6a8b2f9b036ee70e340
+EBUILD opendmarc-1.1.3.ebuild 653 SHA256 0c4c1ad9e27d1d5f9b04cf0867f5fc864bcd650ea010e924f0e612a49ad1ea93 SHA512 8f5e1e61c74e5d869fbe1bb6d7450acddb374d054f20dc4b68db15fd2314918b0ab4a989c9804cf586e8f34e1f443dbcdb74499a704801bfffad00c6c0e10a76 WHIRLPOOL 07dac5bae145538ee3d51e4899c0b6a94cdb43c79ff396ba27eed0e6c07c5a666382182b53da4a112119b7461418e6d4e2e2819f4613f6f72cba597c0160ed78
+MISC ChangeLog 657 SHA256 24257905db640b0a9cded9e447c117897be1ec3a2bca9c38e2a7e5d1e5af1529 SHA512 3ddd8f998bbd68890a4f6ede608ced8299b64721435b4e5b321b6ee14a124cf22700f9d32b091420ee86e5846353d1f1a1de09cd29a3475d1c4152c55980fd9a WHIRLPOOL a1142793006ca236a20fd605a2fe2b7aa173b7fb30b07f282c5f85127e22ead8528ce8575a7f684b887875f8a295e8ae6e497f4b2b78125b68059fc701fdd67a
 MISC metadata.xml 227 SHA256 1c5377e37b9c43ed35a6528e7240e31408fa418ee710e571afe23e37a132e09c SHA512 ffa395b50c2b15726a8b2059081d0c4127cf24c108efa2557d409798c2ff0294bf1bbf3229c043a43062ac9e8580b78bd798f34d0a1138778070682ae008e574 WHIRLPOOL ba7a033d1718f78a0b1038650317f0a1c49f23edf0fbc47a3a34494340874949582c2fae88ae7c7e55221018a1bd468674dd9b8985f62b83ac2378f616d8d488
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlJwWcIACgkQVWmRsqeSphMrygCfQpRC+iTh9I+D+2aWg0OlFQra
+1wQAn08f9jk9By+En7amW9e3T6KekO09
+=Lerf
+-----END PGP SIGNATURE-----
