@@ -32,13 +32,13 @@ DIST system_filter.exim.gz 3075 SHA256 3a3471b486a09e0a0153f7b520e1eaf26d21b97d7
 EBUILD exim-4.80.1-r2.ebuild 12083 SHA256 5ba65d2507f561a1adbc15091562209979f18bc90e2323580c935386101298a1 SHA512 b79d8688bf37316f9e94ad7870ca53b48cf56c7061bcfafd6741478da17a30d406e512293ac8bc47c5774a6cc5114a4ea7f372f61772dc9a26a8ebec9697e22c WHIRLPOOL 05ba7fd9947c8b35a9b1304d6ad474b03dd45c6fdf273cea8e8e839b8b73a407115d97e924bc36d112417d1eb180e9e18f998f3f7a3f23a42fdd3a92ef6287bd
 EBUILD exim-4.80.1-r3.ebuild 12094 SHA256 c505f9e7c21d1bbc663e21a5423ece90162e34dd2d26fe6c13f72b0ea0a68872 SHA512 6df242718bc1eb8ed62a5f07e3479422a1cc5d41ee61e4d2293ec5a7cf06c5e30b20b799656fb57157c555a0f985f0433cce75e970f357093a30274a2b40fde3 WHIRLPOOL d9ad58df38b60cf2d5194adacd1b75534c866c7efa6f739f39ea9329ef144848a1821fed7743662a0e349aeb83ae9b7a71f6d37b29db93596f4c7308c3ed8d4a
 EBUILD exim-4.80.1.ebuild 11556 SHA256 8630f221f92ddd17cf05891d308d5e1347b550f2c6df596916e289dc2129149f SHA512 1d96761c1a2705be3e21e675ac5ecbbb11a97b140f483fd1067552c5ce07f6e3f0266bfd1139525e43c4fbc7a2ecf5b6e444912c2c6d6bbe3618d7f08c31dd2e WHIRLPOOL 2c994828d448d3266f33f514c595c21b61517ceb4ac13a7c2de519945cd853f100f16a8f3d17a956412b8be4a2a80197a316947d81f1db512d33b09c9b3ecca5
-EBUILD exim-4.82.ebuild 12411 SHA256 fd57941f179400cde87f7d7487522105acc62783b5a6043406a60ebbc534cf37 SHA512 3f607c5b9bfc9c15c5c6c8319a45677837bfdd1e3ebe31da95052974b387a3d8e3cdb5007c224b03f04f71c0e17bf6a4ffab7e2400d3be9d5115339aa2edd24f WHIRLPOOL fd66fb67defd1ddc3a3c44b44e87f2d028dbcc7c8e891a8ae67a6c535a9b81cb67b38ec541f6e2cc760cbd30a41be493196ad31a37dc9e6bf246fb7efb2e1c79
-MISC ChangeLog 51524 SHA256 3ed8b452e362e0015f9e09af584e08a964a82c6934301d7b3f738b23d20e839a SHA512 b2d9197dd7cefd9bdd3d32df25728a9e0a905e74dffa1cccf96816f0fc9e4e1d7bfe56f644379a2bb5995d8040410b357c25a162bf1fc0e9f558a5021315462d WHIRLPOOL ab2e7fa2625542ed6113681241eebc7e69c36e5d479d4d1e221b5c9537d53d22b92bbdf2e4101e64b7acc1f2c3dd5ee52e9397b4cf8b251b0e975a2dda886525
+EBUILD exim-4.82.ebuild 12413 SHA256 a42eb32df8ac26155894d6d39a403edc3456336457b8a8091df4f97f6883e016 SHA512 2990b7b833855f80f8acd0ab7b8a15a720853f2f6fc35397d015c8f08de985d2d5a6708de2cbfd19317514436504aed93408abb2d612a3b172b3c1415218ec03 WHIRLPOOL ce5c976b1a7403495ea131d3b979380874d71556c498efb77db49e294eaff26b0a25b017a71390a0c7b433eb212e9763e450ab9f4e341faebd71752f27302e04
+MISC ChangeLog 51616 SHA256 9f2e4c06cb3684d29adffda9b6e518ca44c55fe816e55fb8b74f5c10c0928586 SHA512 505f7e104543d4a24fa4d1435e7c1b302a52b05a24c73ec3b3e085b1221bab943cefab706e0bb9c7997b1b6dc728ea7bba48225e6e54bf462e08f136e9201886 WHIRLPOOL 149c0cff1ff8b9c819e32d306e38e8f9804f3ae05f289c8f84b17fa2321430d6ed76cd5023fbf5d243c88191cd5dc5ebf303fcc97502a089c452e23936ca73e7
 MISC metadata.xml 1893 SHA256 4590b65d91a30a7bf959d0cdf26beec4b226e55d575f56891f78e6e4432f63e4 SHA512 d959cc25e476efc68eb2e2ea4698926ab57e9dd601195ff2742825e58468df091986590e0fb36b6a862164a923c09baed18862c14726ef94e9b56b8f836ded6f WHIRLPOOL 0e66fa63b808f97af0b1f764296935efcc91f34a89f326457601d6a44ab3f11469dd1eb9df0c4916cea7721eaaabc7644fb42f07f2561c0055479c54c5d63a7e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (Darwin)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJuo7kACgkQX3X2B8XHTonapQCghZUNwKeU34nDGPc2omi3xhFg
-QOkAoJQ+4Lp4fY2+kIsRRv+qvZb/DEJQ
-=jM8N
+iEYEAREIAAYFAlJwWewACgkQVWmRsqeSphPoJgCeK3i8rf0xT1nGIJw25AcqKO2G
+rEgAnAnZapli41xT0nV1dIWDg0K7kEF/
+=uhtH
 -----END PGP SIGNATURE-----
