@@ -3,9 +3,9 @@ DEPEND=dev-perl/DBI mail-filter/libmilter
 DESCRIPTION=Open source DMARC implementation
 EAPI=5
 HOMEPAGE=http://www.trusteddomain.org/opendmarc/
-KEYWORDS=~amd64
+KEYWORDS=~amd64 ~hppa
 LICENSE=BSD
 RDEPEND=dev-perl/DBI mail-filter/libmilter virtual/perl-Switch
 SLOT=0
 SRC_URI=mirror://sourceforge/opendmarc/opendmarc-1.1.3.tar.gz
-_md5_=bd08c1af750c62f48ac2b7197a936cbd
+_md5_=4bbb20e4b87ee60ca5a72a2826d3e206
