@@ -4,11 +4,11 @@ DESCRIPTION=A highly configurable, drop-in replacement for sendmail
 EAPI=4
 HOMEPAGE=http://www.exim.org/
 IUSE=tcpd ssl postgres mysql ldap pam exiscan-acl lmtp ipv6 sasl dnsdb perl mbx X nis selinux syslog spf srs gnutls sqlite doc dovecot-sasl radius maildir +dkim dcc dsn dlfunc dmarc
-KEYWORDS=~amd64 ~x86-solaris
+KEYWORDS=~amd64 ~hppa ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=>=sys-apps/sed-4.0.5 >=sys-libs/db-3.2 dev-libs/libpcre perl? ( sys-devel/libperl ) pam? ( virtual/pam ) tcpd? ( sys-apps/tcp-wrappers ) ssl? ( dev-libs/openssl ) gnutls? ( net-libs/gnutls[pkcs11] dev-libs/libtasn1 ) ldap? ( >=net-nds/openldap-2.0.7 ) mysql? ( virtual/mysql ) postgres? ( dev-db/postgresql-base ) sasl? ( >=dev-libs/cyrus-sasl-2.1.26-r2 ) selinux? ( sec-policy/selinux-exim ) spf? ( >=mail-filter/libspf2-1.2.5-r1 ) dmarc? ( mail-filter/opendmarc ) srs? ( mail-filter/libsrs_alt ) X? ( x11-proto/xproto x11-libs/libX11 x11-libs/libXmu x11-libs/libXt x11-libs/libXaw ) sqlite? ( dev-db/sqlite ) radius? ( net-dialup/radiusclient ) virtual/libiconv !mail-mta/courier !mail-mta/esmtp !mail-mta/mini-qmail !<mail-mta/msmtp-1.4.19-r1 !>=mail-mta/msmtp-1.4.19-r1[mta] !mail-mta/netqmail !mail-mta/nullmailer !mail-mta/postfix !mail-mta/qmail-ldap !mail-mta/sendmail !mail-mta/opensmtpd !<mail-mta/ssmtp-2.64-r2 !>=mail-mta/ssmtp-2.64-r2[mta] !net-mail/mailwrapper >=net-mail/mailbase-0.00-r5 virtual/logger dcc? ( mail-filter/dcc )
 REQUIRED_USE=spf? ( exiscan-acl ) srs? ( exiscan-acl ) dmarc? ( spf dkim )
 SLOT=0
 SRC_URI=ftp://ftp.exim.org/pub/exim/exim4/exim-4.82.tar.bz2 mirror://gentoo/system_filter.exim.gz doc? ( ftp://ftp.exim.org/pub/exim/exim4/exim-html-4.82.tar.bz2 )
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	8b38b0911d1a88cc7c0a22b59b10b5cb	multilib	892e597faee02a5b94eb02ab512e7622	pam	5c1a9ef4892062f9ec25c8ef7c1f1e52	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9e58740b894927a062f3f3b1ba3140bc
+_md5_=aac883399ff63a68b88cc72b1f1f3ccf
