@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/exim
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.267 2013/10/28 17:49:40 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.268 2013/10/30 00:59:22 jer Exp $
+
+  30 Oct 2013; Jeroen Roovers <jer@gentoo.org> exim-4.82.ebuild:
+  Marked ~hppa (bug #489676).
 
 *exim-4.82 (28 Oct 2013)
 
