@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/opendmarc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/opendmarc/ChangeLog,v 1.2 2013/10/29 19:45:35 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/opendmarc/ChangeLog,v 1.3 2013/10/30 00:58:41 jer Exp $
+
+  30 Oct 2013; Jeroen Roovers <jer@gentoo.org> opendmarc-1.1.3.ebuild:
+  Marked ~hppa (bug #489676).
 
   29 Oct 2013; Fabian Groffen <grobian@gentoo.org> opendmarc-1.1.3.ebuild:
   Fix dependencies to better reflect reality, bug #489680
